--- a/stylechuva.css
+++ b/stylechuva.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 
@@ -13,6 +14,8 @@
     display: flex;
     flex-direction: row;
 }
+
+
 
 .sidemenu{
     background-color: #fff;
@@ -47,3 +50,60 @@
     border-left: #EE7A3A solid 5px ;
 
 }
+
+.header{
+    width: 100%;
+    height: 68px;
+    background: #FDF1EB;
+    font-family: 'Roboto';
+    padding-left: 36px;
+    display: flex;
+    align-items:center;
+}
+.h1header{
+    width: 643px;
+    height: 26px;
+    left: 36px;
+    top: 23px;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px; 
+    color: #725C5C;
+}
+.pheader1{
+    width: 391px;
+    height: 16px;
+    left: 36px;
+    top: 5px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #725C5C;
+}
+.pheader2{
+    width: 105px;
+    height: 16px;
+    left: 36px;
+    top: 48px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #725C5C;
+}
+
+.login{
+    background-color: red;
+    }
+.plogin{
+    color: #333333;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    }
+.email{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    }
+
+
