--- a/stylechuva.css
+++ b/stylechuva.css
@@ -4,10 +4,12 @@
 
 
 
-*{
+*{  
+    text-decoration: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 #conteiner{
@@ -15,14 +17,17 @@
     flex-direction: row;
 }
 
-
+.content{
+    width: 87%;
+    margin-left: 13%;
+}
 
 .sidemenu{
     background-color: #fff;
     height: 100vh;
     width: fit-content;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-  
+    position: fixed;
 }
 
 .slaca{
@@ -59,6 +64,7 @@
     padding-left: 36px;
     display: flex;
     align-items:center;
+    justify-content: space-between;
 }
 .h1header{
     width: 643px;
@@ -91,9 +97,18 @@
     color: #725C5C;
 }
 
-.login{
-    background-color: red;
-    }
+.dropdown{
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-menu{
+    border-bottom: 1px;
+    border-top: 1px;
+    border-right: 1px;
+    border-left: none;
+}
+
 .plogin{
     color: #333333;
     font-size: 14px;
@@ -105,5 +120,23 @@
     font-size: 12px;
     line-height: 15px;
     }
+    .container-section{
+
+       
+
+
+    }
+.overlay-video{
+    width:783px;
+    height:439px;
+    left:2px;
+    top:73px;
+    background:url("imagens/dewey_1.png");
+   
+    
+}
+.overlay-video{
+    background-color:rgba(141, 53, 6, 0.7);
+}
 
 
