--- a/stylechuva.css
+++ b/stylechuva.css
@@ -18,8 +18,7 @@
 }
 
 .content{
-    width: 87%;
-    margin-left: 13%;
+    
 }
 
 .sidemenu{
@@ -27,7 +26,7 @@
     height: 100vh;
     width: fit-content;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    position: fixed;
+    
 }
 
 .slaca{
@@ -67,30 +66,18 @@
     justify-content: space-between;
 }
 .h1header{
-    width: 643px;
-    height: 26px;
-    left: 36px;
-    top: 23px;
     font-weight: 400;
     font-size: 22px;
     line-height: 26px; 
     color: #725C5C;
 }
 .pheader1{
-    width: 391px;
-    height: 16px;
-    left: 36px;
-    top: 5px;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
     color: #725C5C;
 }
 .pheader2{
-    width: 105px;
-    height: 16px;
-    left: 36px;
-    top: 48px;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
@@ -119,24 +106,58 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-    }
-    .container-section{
-
-       
-
-
-    }
-.overlay-video{
-    width:783px;
-    height:439px;
-    left:2px;
-    top:73px;
-    background:url("imagens/dewey_1.png");
-   
-    
+ }
+.container-section{
+    position: relative;
 }
-.overlay-video{
-    background-color:rgba(141, 53, 6, 0.7);
+.video-player{
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left:0;
+}
+
+.marrom{
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left:0;
+}
+.video-icon{
+    border-radius: 50%;
+    border: #ED7839 solid 1px;
+}
+.icon-and-text{
+    z-index: 3;
+    position: absolute;
+    border-radius: 50%;
+    top:287px;
+    left: 35px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.video-text{
+
+}
+.resumo{
+    border: 1px solid #ECECEC;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    border-radius: 3px;
+}
+.discussoes{
+    border: 1px solid #ECECEC;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.12);
+    border-radius: 4px; 
+    border-radius: 3px; 
+}
+.box-perguntas{
+    background: #FFFFFF;
+    border: 1px solid #E7E7E7;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    padding-bottom: 17px; 
 }
 
 
